--- a/index.html
+++ b/index.html
@@ -1,195 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perccent Prototypes</title>
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Perccent Prototypes</title>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700&display=swap" rel="stylesheet"/>
+  <style>
+    :root {
+      --text-light: #ffffff;
+      --text-muted: #dddddd;
+      --border-color: rgba(255, 255, 255, 0.2);
+    }
 
-        body {
-            font-family: 'Red Hat Display', sans-serif;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #3ad77e 0%, #0047bd 100%);
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        .header {
-            text-align: center;
-            margin-bottom: 40px;
-            color: white;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        }
+    h1 {
+        color: #3ad77e;
+    }
+    body {
+  font-family: 'Red Hat Display', sans-serif;
+  min-height: 100vh;
+  background: url('https://raw.githubusercontent.com/sagnikmitra/proto/refs/heads/main/Brand%20Identity%20Manual.png') no-repeat center center/cover;
+  color: var(--text-light);
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* center vertically */
+  align-items: center;     /* center horizontally */
+  padding: 40px 20px;
+  text-align: center;
+}
 
-        .header h1 {
-            font-size: 3.5rem;
-            font-weight: 700;
-            margin-bottom: 10px;
-            letter-spacing: -1px;
-        }
 
-        .header p {
-            font-size: 1.2rem;
-            opacity: 0.9;
-        }
+    header {
+      text-align: center;
+      margin-bottom: 60px;
+      text-shadow: 0 2px 10px rgba(0,0,0,0.6);
+    }
 
-        .container {
-            max-width: 1400px;
-            width: 100%;
-            padding: 20px;
-            perspective: 1000px;
-        }
+    header h1 {
+      font-size: 3.2rem;
+      font-weight: 700;
+      margin-bottom: 12px;
+    }
 
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            padding: 20px;
-        }
+    header p {
+      font-size: 1.25rem;
+      color: var(--text-muted);
+    }
 
-        .card {
-            background: rgba(33, 33, 33, 0.7);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            padding: 30px;
-            text-decoration: none;
-            color: #fff;
-            transition: all 0.4s ease;
-            cursor: pointer;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            box-shadow: 
-                20px 20px 60px rgba(0, 0, 0, 0.3),
-                -20px -20px 60px rgba(255, 255, 255, 0.05),
-                inset 5px 5px 15px rgba(255, 255, 255, 0.05),
-                inset -5px -5px 15px rgba(0, 0, 0, 0.3);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            transform-style: preserve-3d;
-            transform: translateZ(0);
-        }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px;
+      width: 100%;
+      max-width: 1200px;
+    }
 
-        .card:hover {
-            transform: translateY(-10px) translateZ(20px);
-            box-shadow: 
-                25px 25px 75px rgba(0, 0, 0, 0.35),
-                -25px -25px 75px rgba(255, 255, 255, 0.1),
-                inset 7px 7px 20px rgba(255, 255, 255, 0.1),
-                inset -7px -7px 20px rgba(0, 0, 0, 0.35);
-            background: rgba(33, 33, 33, 0.85);
-        }
+    @media (min-width: 1024px) {
+      .grid {
+        grid-template-columns: repeat(4, 1fr);
+      }
+    }
 
-        .card h2 {
-            margin: 15px 0;
-            font-size: 1.8rem;
-            color: #ffffff;
-            font-weight: 700;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        }
+    .card {
+      backdrop-filter: blur(12px);
+      background: rgba(255, 255, 255, 0.08);
+      border: 1px solid var(--border-color);
+      border-radius: 20px;
+      padding: 30px 25px;
+      text-align: center;
+      text-decoration: none;
+      color: inherit;
+      transition: all 0.4s ease;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    }
 
-        .card p {
-            color: rgba(255, 255, 255, 0.9);
-            font-size: 1.1rem;
-            line-height: 1.6;
-            margin-top: 10px;
-            font-weight: 500;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-        }
+    .card:hover {
+      background: rgba(255, 255, 255, 0.15);
+      transform: translateY(-6px);
+    }
 
-        .icon {
-            font-size: 3.5rem;
-            margin-bottom: 15px;
-            transition: all 0.4s ease;
-            filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.2));
-        }
+    .card .icon {
+      font-size: 2.8rem;
+      margin-bottom: 18px;
+      transition: transform 0.3s;
+    }
 
-        .card:hover .icon {
-            transform: scale(1.2) translateZ(30px);
-            filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.3));
-        }
+    .card:hover .icon {
+      transform: scale(1.15);
+    }
 
-        @media (max-width: 1200px) {
-            .grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-            .header h1 {
-                font-size: 2.8rem;
-            }
-        }
+    .card h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: #3ad77e;
+}
 
-        @media (max-width: 768px) {
-            .grid {
-                grid-template-columns: 1fr;
-                padding: 10px;
-            }
 
-            .container {
-                padding: 10px;
-            }
+    .card p {
+      font-size: 1rem;
+      color: var(--text-muted);
+      line-height: 1.6;
+    }
 
-            .card {
-                padding: 25px;
-            }
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2.2rem;
+      }
 
-            .card h2 {
-                font-size: 1.5rem;
-            }
-
-            .card p {
-                font-size: 1rem;
-            }
-
-            .header h1 {
-                font-size: 2rem;
-            }
-
-            .header p {
-                font-size: 1rem;
-            }
-        }
-    </style>
+      header p {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="header">
-        <h1>Perccent Prototypes</h1>
-        <p>Choose your preferred version to explore</p>
-    </div>
-    <div class="container">
-        <div class="grid">
-            <a href="https://www.figma.com/proto/xQmvE4X64KVxJ6LHVZieVn/Perccent-UI?page-id=682%3A1066&node-id=725-2678&viewport=1122%2C155%2C0.09&t=3V8n3lQPltBVXSHJ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=730%3A8006&show-proto-sidebar=1" class="card" target="_blank">
-                <div class="icon">📱☀️</div>
-                <h2>Phone Light</h2>
-                <p>View the mobile light theme prototype</p>
-            </a>
+  <header>
+    <h1>Perccent Prototypes</h1>
+    <p>Explore tailored UI experiences across devices and themes</p>
+  </header>
 
-            <a href="https://www.figma.com/proto/xQmvE4X64KVxJ6LHVZieVn/Perccent-UI?page-id=682%3A1066&node-id=730-8095&viewport=1122%2C155%2C0.09&t=3V8n3lQPltBVXSHJ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=730%3A8095&show-proto-sidebar=1" class="card" target="_blank">
-                <div class="icon">📱🌙</div>
-                <h2>Phone Dark</h2>
-                <p>View the mobile dark theme prototype</p>
-            </a>
+  <div class="grid">
+    <a href="https://www.figma.com/proto/xQmvE4X64KVxJ6LHVZieVn/Perccent-UI?page-id=682%3A1066&node-id=725-2678&viewport=1122%2C155%2C0.09&t=3V8n3lQPltBVXSHJ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=730%3A8006&show-proto-sidebar=1" class="card" target="_blank">
+      <div class="icon">📱☀️</div>
+      <h2>Phone Light</h2>
+      <p>Mobile Layout with Light Theme experience</p>
+    </a>
 
-            <a href="https://www.figma.com/proto/xQmvE4X64KVxJ6LHVZieVn/Perccent-UI?page-id=682%3A1066&node-id=730-8843&viewport=1122%2C155%2C0.09&t=3V8n3lQPltBVXSHJ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=730%3A8843&show-proto-sidebar=1" class="card" target="_blank">
-                <div class="icon">💻☀️</div>
-                <h2>Desktop Light</h2>
-                <p>View the desktop light theme prototype</p>
-            </a>
+    <a href="https://www.figma.com/proto/xQmvE4X64KVxJ6LHVZieVn/Perccent-UI?page-id=682%3A1066&node-id=730-8095&viewport=1122%2C155%2C0.09&t=3V8n3lQPltBVXSHJ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=730%3A8095&show-proto-sidebar=1" class="card" target="_blank">
+      <div class="icon">📱🌙</div>
+      <h2>Phone Dark</h2>
+      <p>Mobile Layout with Dark Theme experience</p>
+    </a>
 
-            <a href="https://www.figma.com/proto/xQmvE4X64KVxJ6LHVZieVn/Perccent-UI?page-id=682%3A1066&node-id=730-8964&viewport=1122%2C155%2C0.09&t=3V8n3lQPltBVXSHJ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=730%3A8964&show-proto-sidebar=1" class="card" target="_blank">
-                <div class="icon">💻🌙</div>
-                <h2>Desktop Dark</h2>
-                <p>View the desktop dark theme prototype</p>
-            </a>
-        </div>
-    </div>
+    <a href="https://www.figma.com/proto/xQmvE4X64KVxJ6LHVZieVn/Perccent-UI?page-id=682%3A1066&node-id=730-8843&viewport=1122%2C155%2C0.09&t=3V8n3lQPltBVXSHJ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=730%3A8843&show-proto-sidebar=1" class="card" target="_blank">
+      <div class="icon">💻☀️</div>
+      <h2>Desktop Light</h2>
+      <p>Desktop Layout with Light Theme experience</p>
+    </a>
+
+    <a href="https://www.figma.com/proto/xQmvE4X64KVxJ6LHVZieVn/Perccent-UI?page-id=682%3A1066&node-id=730-8964&viewport=1122%2C155%2C0.09&t=3V8n3lQPltBVXSHJ-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=730%3A8964&show-proto-sidebar=1" class="card" target="_blank">
+      <div class="icon">💻🌙</div>
+      <h2>Desktop Dark</h2>
+      <p>Desktop Layout with Dark Theme experience</p>
+    </a>
+  </div>
 </body>
 </html>
